syntax = "proto3";

package my_package;

message TransaccionProcesada {
  string order_id = 1;
  string status = 2;
}
